Fix bug remove predators